--- a/SchoolManagmentApp/static/css/base_style.css
+++ b/SchoolManagmentApp/static/css/base_style.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/university_1920.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/dark_background.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -118,94 +118,6 @@ nav .nav-list li:not(:last-child) a:hover {
   transition: 0.4s;
 }
 
-.container {
-  padding-top: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-left: 10%;
-  padding-right: 10%;
-}
-.container .login-form,
-.container .hero-text {
-  margin-bottom: 40px;
-  overflow-y: hidden;
-  max-width: 50%;
-}
-
-.container .hero-text h1 {
-  color: white;
-  font-size: 47px;
-  font-weight: 900;
-  line-height: 1.2;
-  margin: 20px 0px 20px;
-}
-
-span {
-  color: #2ecc71;
-}
-
-.container .hero-text h3 {
-  color: #eee;
-  font-weight: 400;
-  font-size: 22px;
-}
-
-.container .hero-text p {
-  width: 540px;
-  max-width: 100%;
-  color: #eee;
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 30px;
-}
-
-.social a {
-  width: 37px;
-  height: 37px;
-  border-radius: 50%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 17px;
-  color: #eee;
-  cursor: pointer;
-  margin-right: 20px;
-  background-color: rgba(255, 255, 255, 0.1);
-  margin-bottom: 35px;
-}
-
-.social a:hover {
-  transform: scale(1.1);
-  background: #2ecc71;
-  transition: 0.4s;
-}
-
-.container .hero-text button {
-  color: #eee;
-  background: #2ecc71;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  padding: 8px 30px;
-  border: 2px solid #2ecc71;
-  border-radius: 30px;
-  cursor: pointer;
-}
-
-.container .hero-text button:hover {
-  background: transparent;
-  border: 2px solid #2ecc71;
-  color: #2ecc71;
-  transition: 0.4s;
-}
-
-.bottom p {
-  color: #eee;
-  letter-spacing: 2px;
-  font-size: 15px;
-}
-
 @media screen and (max-width: 930px) {
   nav .hamb {
     display: initial;
@@ -266,105 +178,8 @@ span {
   nav .nav-list.open {
     right: 0;
   }
-  .container .hero-text h1 {
-    font-size: 25px;
-  }
-  .container .hero-text h3 {
-    font-size: 16px;
-  }
-  .container .hero-text p {
-    font-size: 16px;
-  }
 }
 
-
-.login-form {
-  height: 550px;
-  width: 400px;
-  background-color: rgba(255, 255, 255, 0.03);
-  border-radius: 10px;
-  backdrop-filter: blur(15px);
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-  padding: 50px 35px;
-  display: flex;
-  flex-direction: column;
-  align-items: center; 
-  transition: opacity .7s;
-}
-
-.login-form * {
-  font-family: "Poppins", sans-serif;
-  color: #ffffff;
-  letter-spacing: 0.5px;
-  outline: none;
-  border: none;
-}
-
-.login-form form h3 {
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 60px;
-  text-align: center;
-}
-
-.login-form form label {
-  display: block;
-  margin-top: 30px;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.login-form form input {
-  display: block;
-  height: 50px;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.05);
-  border-radius: 3px;
-  padding: 0 10px;
-  margin-top: 8px;
-  font-size: 14px;
-  font-weight: 300;
-}
-
-.login-form form input:hover {
-  outline: 2px solid #0001;
-}
-
-.login-form form button {
-  margin-top: 50px;
-  width: 100%;
-  background-color: transparent;
-  color: #eee;
-  padding: 15px 0;
-  font-size: 18px;
-  font-weight: 600;
-  border-radius: 5px;
-  border: 2px solid #2ecc71;
-  cursor: pointer;
-}
-
-
-.container .hero-text button {
-  color: #eee;
-  background: #2ecc71;
-  letter-spacing: 2px;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 24px;
-  padding: 8px 30px;
-  border: 2px solid #2ecc71;
-  border-radius: 30px;
-  cursor: pointer;
-}
-
-.login-form-hide{
-  opacity: 0;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 930px) {
-}
 
 @media only screen and (max-width: 600px) {
 }
