--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="pl">
+{% extends "base.html" %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-</head>
-
-<body>
-
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- okno filtrowania -->
 
 
 
-    <!-- guziczki to rozrzucenia po stronie -->
+
 
     <!-- tytuł strony -->
     <br>
@@ -25,55 +14,39 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <div class="lc-block">
-                    <h2 editable="inline" class="display-4 mb-2"><b>Twoje wydarzenia</b></h2>
+                    <h2 editable="inline" class="display-4 mb-2 text-white"><b>Your events:</b></h2>
                 </div>
 
                 <!-- okno potwirdzenia usunięcia -->
 
-                <!-- messages -->
 
 
-                <div>
-                    {% if messages %}
-                    {% for message in messages %}
-                    <div class="alert alert-primary pt-3" role="alert">
-                        {{ message }}
-                    </div>
-                    {% endfor %}
-                    {% endif %}
-                </div>
             </div>
         </div>
 
         <!-- posty -->
-        <div class="row pt-4">
+        <div class="row pt-4 mb-4">
             {% for event in pages %}
             <div class="col-md-4 mb-4">
-                <div class="lc-block border border-dark p-4 shadow-lg rounded" style="background-color: #1a291d">
+                <div class="lc-block border border-dark p-4 shadow-lg rounded" style="background-color: #186428">
                     <div class="text-center text-white">
                         <h4 class="my-3" editable="inline">
-                            <a href="{% url 'event' event.id %}" class="text-decoration-none text-white">{{ event.event_type }}</a>
+                            <a href="{% url 'event_detail' event.id %}" class="text-decoration-none text-white">{{ event.event_type }}</a>
                         </h4>
-                        <h5 class="my-3 text-white" editable="inline">Termin: {{ event.realisation_time }}</h5>
-                        <p>{{ event.subject }}</p>
-                        {% if not event.finished %}
-                        {% if not event.noticed %}
-                        <p><i class="fa-solid fa-circle-exclamation fa-lg" style="color: #ff0000;"></i></p>
-                        {% else %}
-                        <p><i class="fa-solid fa-circle-exclamation fa-lg" style="color: #cccf1085;"></i></p>
-                        {% endif %}
-                        {% else %}
-                        <p><i class="fa-solid fa-check fa-lg" style="color: #00ff00;"></i></p>
-                        {% endif %}
-                        <!-- przyciski to zarządzania postem -->
-
+                        <h5 class="my-3 text-white" editable="inline">Realisation: {{ event.realisation_time }}</h5>
+                        <p>Subject: {{ event.subject }}</p>
+                        <p class="card-subtitle mb-2">Author: {{event.author}}</p>
+                        <p class="card-subtitle mb-2 text-muted">Added: {{event.add_time}}</p>
                     </div>
+
+                    {% if event.visited == False %}
+                    <i class="fa-solid fa-circle-exclamation fa-lg d-flex justify-content-center" style="color: #ff0000;"></i>
+                    {% endif %}
                 </div>
             </div>
             {% endfor %}
         </div>
 
-        <!-- legenda -->
 
         <!-- paginacja -->
         {% if pages %}
@@ -99,19 +72,9 @@
         </nav>
         {% endif %}
     </div>
-</body>
-
-
-
-</body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+<p>nawigacja</p>
+<br>
+<p>nawigacja</p>
+{% endblock content %}
 
 </html>
