--- a/SchoolManagmentApp/usersApp/templates/registration.html
+++ b/SchoolManagmentApp/usersApp/templates/registration.html
@@ -4,49 +4,100 @@
     GameCave
 {% endblock title %}
 {% block content%}
-
 <section class="first-section">
     <div class="container-fluid ">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-md-9 col-lg-6 col-xl-7 empty-class">
                 <div class="text-center">
-                    <img src="" class="img-fluid" alt="Sample image">
+                    <img src="{% static 'img/students.png' %}" class="img-fluid" alt="Sample image">
                 </div>
             </div>
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
+            <div class="mt-5 col-12 col-md-8 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
                 <div class="card bg-dark text-white" style="border-radius: 1rem;">
-                    <form action="{% url 'register_user' %}" method="POST" class="card-body p-5 text-center" enctype="multipart/form-data">
-                        <!-- <div class=" mt-md-4 pb-5">
-                            <h2 class="fw-bold mb-2 text-uppercase">Sign up</h2>
+                    <form 
+                    {% if view_name == 'register_student' %}action="{% url 'register_student' %}"{% endif %}
+                    {% if view_name == 'register_teacher' %}action="{% url 'register_teacher' %}"{% endif %}
+                    {% if view_name == 'register_parent' %}action="{% url 'register_parent' %}"{% endif %}
+                    method="POST" class="card-body p-5 text-center" enctype="multipart/form-data">
+                        <div class=" mt-md-4 pb-5">
+
+                            <h2 class="fw-bold mb-2 text-uppercase">Sign up student</h2>
                             <p class="text-white-50 mb-5">Please enter your login, password, and email!</p>
-                            <div class="form-outline mb-4">
-                                <input type="text" name="username" id="username" class="form-control form-control-lg" />
-                                <label class="form-label" for="username">Username</label>
+                            <!-- Username -->
+                            <div class="form-outline mb-2">
+                                <input class="form-control form-control-md" type="text" name="username" maxlength="150" required="" id="id_username">
+                                <label for="id_username" class="form-label">Username:</label>
                             </div>
-                            <div class="form-outline mb-4">
-                                <input type="password" name="password1" id="typePasswordX" class="form-control form-control-lg" />
-                                <label class="form-label" for="typePasswordX">Password</label>
+
+                            <!-- password1 -->
+                            <div class="form-outline mb-2">
+                                <input type="password" name="password1" required="" id="id_password1" class="form-control form-control-md">
+                                <label class="form-label" for="id_password1">Password:</label>
                             </div>
-                            <div class="form-outline mb-4">
-                                <input type="password" name="password2" id="typePasswordX" class="form-control form-control-lg" />
-                                <label class="form-label" for="typePasswordX">Repeat password</label>
+                            
+                            <!-- password2 -->
+                            <div class="form-outline mb-2">
+                                <input type="password" name="password2" required="" id="id_password2" class="form-control form-control-md">
+                                <label class="form-label" for="id_password2">Confirm password:</label>
                             </div>
-                            <div class="form-outline mb-4">
-                                <input type="email" name="email" id="typeEmailX" class="form-control form-control-lg" />
-                                <label class="form-label" for="typeEmailX">Email</label>
-                            </div> -->
+
+                            <!-- first_name -->
+                            <div class="form-outline mb-2">
+                                <input class="form-control form-control-md" required="" type="text" name="first_name" maxlength="150" id="id_first_name">
+                                <label class="form-label" for="id_first_name">First name:</label>
+                            </div>
+
+                            <!-- last_name -->
+                            <div class="form-outline mb-2">
+                                <input class="form-control form-control-md" required="" type="text" name="last_name" maxlength="150" id="id_last_name">
+                                <label class="form-label" for="id_last_name">Last name:</label>
+                            </div>
+
+                            <!-- email -->
+                            <div class="form-outline mb-2">
+                                <input type="email" required="" name="email" id="id_email" class="form-control form-control-md" />
+                                <label class="form-label" for="id_email">Email</label>
+                            </div>
+
+                            <!-- phone_number -->
+                            <div class="form-outline mb-2">
+                                <input class="form-control form-control-md" type="text" name="phone_number" maxlength="9" required="" id="id_phone_number">
+                                <label class="form-label" for="id_phone_number">Phone number:</label>
+                            </div>
+
+                            {% if view_name == 'register_teacher' %}
+                            
+                            <div class="form-outline mb-2">
+                                {{ teacher_registration_form }}
+                            </div>
+                            
+                            {% endif %}
+
+                            
+                            {% if view_name == 'register_parent' %}
+                            <div class="form-outline mb-2">
+                                {{ parent_registration_form }}
+                            </div>
+                            
+                            {% endif %}
 
 
-                            {{form}}
+
+
+                            <!-- Photo -->
+                            <div class="form-outline mb-3">
+                                <input class="form-control form-control-md" type="file" name="photo" accept="image/*" id="id_photo">
+                                <label for="id_photo" class="form-label">Photo:</label>
+                            </div>
+
+
+
+
+
+
+
                             {% csrf_token %}
-                            <button class="btn btn-outline-light btn-lg px-5 mb-5" type="submit">Sign up</button>
-							<div>
-								{%if message %}
-									{%for msg in message%}
-										<p>{{msg}}</p>
-									{%endfor%}
-								{%endif%}
-							</div>
+                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Sign up</button>                 
                         </div>
                     </form>
                 </div>
