--- a/SchoolManagmentApp/static/css/base_style.css
+++ b/SchoolManagmentApp/static/css/base_style.css
@@ -22,7 +22,8 @@ body {
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/dark_background.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(../img/dark_background.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -46,8 +47,8 @@ header {
   align-items: center;
   justify-content: center;
   -moz-tab-size: 20px;
-    -o-tab-size: 20px;
-       tab-size: 20px;
+  -o-tab-size: 20px;
+  tab-size: 20px;
   cursor: pointer;
 }
 
@@ -111,7 +112,7 @@ nav .nav-list li:not(:last-child) a:hover {
   font-weight: 500;
 }
 
-.login-nav-btn:hover{
+.login-nav-btn:hover {
   background: #2ecc71;
   color: #fff;
   border: 2px solid transparent;
@@ -128,8 +129,8 @@ nav .nav-list li:not(:last-child) a:hover {
   .click span {
     position: absolute;
     margin-top: 12px;
-  }html
-  .click span:first-child {
+  }
+  html .click span:first-child {
     transform: rotate(-40deg);
   }
   .click span:nth-child(2) {
@@ -155,7 +156,7 @@ nav .nav-list li:not(:last-child) a:hover {
     transition: 0.3s right;
     border-radius: 10px;
   }
-  
+
   nav .nav-list li {
     display: block;
   }
@@ -180,20 +181,18 @@ nav .nav-list li:not(:last-child) a:hover {
   }
 }
 
-
 @media only screen and (max-width: 600px) {
 }
 
-
-.red{
-	background-color: red;
+.red {
+  background-color: red;
 }
 
-.green{
-	background-color: limegreen;
+.green {
+  background-color: limegreen;
 }
 
-.message{
+.message {
   position: fixed;
   top: 0;
   left: 0;
@@ -208,18 +207,91 @@ nav .nav-list li:not(:last-child) a:hover {
 }
 
 @keyframes errorAnimation {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-	25%{
-		opacity: 100;
-	}
-    50% {
-        opacity: 100;
-    }
+  25% {
+    opacity: 100;
+  }
+  50% {
+    opacity: 100;
+  }
 
-    100% {
-        opacity: 0;
-    }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* events */
+
+.card-events {
+  height: 17rem;
+  border: 2px solid #103a15;
+  border-radius: 2rem;
+  padding: 1rem;
+  background-color: #186428;
+  box-shadow: 3px 3px 4px rgba(10, 13, 42, 1.5);
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.card-events:hover {
+  background-color: #2d8b40;
+}
+
+.card-divider {
+  margin: 1rem;
+  border: none;
+  border-top: 1px solid #e9ecef;
+}
+
+.card-one{
+  border: 2px solid #103a15;
+  border-radius: 2rem;
+  padding: 1rem;
+  background-color: #186428;
+  box-shadow: 3px 3px 4px rgba(10, 13, 42, 1.5);
+}
+
+.exclamation{
+  font-size: 2rem;
+}
+
+.back-icon{
+  font-size: 2rem;
+}
+
+.size-up-hover:hover{
+  font-size: 1.05rem;
+  color: #9bb49b;
+}
+
+/* pagination */
+
+.page-link {
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #ffffff;
+  background-color: #07491b;
+  border: 1px solid #195304;
+}
+
+.page-link:hover {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #195304;
+  border-color: #07491b;
+}
+
+.page-item-active{
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  background-color: #08852d;
+  border: 1px solid #195304;
 }
