--- a/SchoolManagmentApp/usersApp/templates/registration.html
+++ b/SchoolManagmentApp/usersApp/templates/registration.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load widget_tweaks %}
 {% block title%}
     GameCave
 {% endblock title %}
@@ -9,7 +10,10 @@
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-md-9 col-lg-6 col-xl-7 empty-class">
                 <div class="text-center">
-                    <img src="{% static 'img/students.png' %}" class="img-fluid" alt="Sample image">
+                    {% if view_name == 'register_student' %}<img src="{% static 'img/students.png' %}" {% endif %}
+                    {% if view_name == 'register_teacher' %}<img src="{% static 'img/teacher.png' %}" {% endif %}
+                    {% if view_name == 'register_parent' %}<img src="{% static 'img/parents.png' %}" {% endif %}
+                    class="img-fluid pics" alt="Sample image">
                 </div>
             </div>
             <div class="mt-5 col-12 col-md-8 col-lg-6 col-xl-5 d-flex justify-content-center align-items-center">
@@ -22,82 +26,38 @@
                         <div class=" mt-md-4 pb-5">
 
                             <h2 class="fw-bold mb-2 text-uppercase">Sign up student</h2>
-                            <p class="text-white-50 mb-5">Please enter your login, password, and email!</p>
-                            <!-- Username -->
-                            <div class="form-outline mb-2">
-                                <input class="form-control form-control-md" type="text" name="username" maxlength="150" required="" id="id_username">
-                                <label for="id_username" class="form-label">Username:</label>
-                            </div>
+                            <p class="text-white-50 mb-5">Please enter your data!</p>
 
-                            <!-- password1 -->
-                            <div class="form-outline mb-2">
-                                <input type="password" name="password1" required="" id="id_password1" class="form-control form-control-md">
-                                <label class="form-label" for="id_password1">Password:</label>
-                            </div>
-                            
-                            <!-- password2 -->
-                            <div class="form-outline mb-2">
-                                <input type="password" name="password2" required="" id="id_password2" class="form-control form-control-md">
-                                <label class="form-label" for="id_password2">Confirm password:</label>
-                            </div>
+                            {%for field in registration_form %}
+                                {{field|add_class:"form-control form-control-md"}}
+                                {{field|add_label_class:"form-label"}}
+                            {%endfor%}
 
-                            <!-- first_name -->
-                            <div class="form-outline mb-2">
-                                <input class="form-control form-control-md" required="" type="text" name="first_name" maxlength="150" id="id_first_name">
-                                <label class="form-label" for="id_first_name">First name:</label>
-                            </div>
-
-                            <!-- last_name -->
-                            <div class="form-outline mb-2">
-                                <input class="form-control form-control-md" required="" type="text" name="last_name" maxlength="150" id="id_last_name">
-                                <label class="form-label" for="id_last_name">Last name:</label>
-                            </div>
-
-                            <!-- email -->
-                            <div class="form-outline mb-2">
-                                <input type="email" required="" name="email" id="id_email" class="form-control form-control-md" />
-                                <label class="form-label" for="id_email">Email</label>
-                            </div>
-
-                            <!-- phone_number -->
-                            <div class="form-outline mb-2">
-                                <input class="form-control form-control-md" type="text" name="phone_number" maxlength="9" required="" id="id_phone_number">
-                                <label class="form-label" for="id_phone_number">Phone number:</label>
-                            </div>
 
                             {% if view_name == 'register_teacher' %}
-                            
-                            <div class="form-outline mb-2">
-                                {{ teacher_registration_form }}
-                            </div>
-                            
+
+                            {%for field in teacher_registration_form %}
+                                {{field|add_class:"form-control form-control-md"}}
+                                {{field|add_label_class:"form-label"}}
+                            {%endfor%}
+
                             {% endif %}
 
                             
                             {% if view_name == 'register_parent' %}
-                            <div class="form-outline mb-2">
-                                {{ parent_registration_form }}
-                            </div>
+
+                            {%for field in parent_registration_form %}
+                                {{field|add_class:"form-control form-control-md"}}
+                                {{field|add_label_class:"form-label"}}
+                            {%endfor%}
+
                             
                             {% endif %}
 
-
-
-
-                            <!-- Photo -->
-                            <div class="form-outline mb-3">
-                                <input class="form-control form-control-md" type="file" name="photo" accept="image/*" id="id_photo">
-                                <label for="id_photo" class="form-label">Photo:</label>
-                            </div>
-
-
-
-
-
-
-
                             {% csrf_token %}
-                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Sign up</button>                 
+                            <div class="form-outline mt-2">
+                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Sign up</button>      
+                        </div>           
                         </div>
                     </form>
                 </div>
