finishing filtring and style on events site

--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -18,13 +18,17 @@
                 <select name="subject" id="subject" class="filter-form-control">
                     <option value="empty">Empty</option>
                     <option value="Mathematic">Mathematic</option>
-                    <option value="English">English</option>
+                    <option value="History">History</option>
+                    <option value="Biology">Biology</option>
+                    <option value="Physics">Physics</option>
+                    <option value="Chemistry">Chemistry</option>
+                    <option value="Philosphy">Philosophy</option>
                   </select>
             </div>
             <div class="form-field">
                 <label for="event_type">Event Type:</label>
                 <select name="event_type" id="event_type" class="filter-form-control">
-                    <option value="Empty">Empty</option>
+                    <option value="empty">Empty</option>
                     <option value="Other">Other</option>
                     <option value="Small Test">Small Test</option>
                     <option value="Test">Test</option>
@@ -90,7 +94,7 @@
 
     <!-- pagination -->
     
-    {% if pages  %}
+    {% if pages.paginator.num_pages > 1 %}
     <nav aria-label="..." >
        
         <ul class="pagination d-flex justify-content-center">
