--- a/SchoolManagmentApp/usersApp/templates/registration.html
+++ b/SchoolManagmentApp/usersApp/templates/registration.html
@@ -25,13 +25,19 @@
                     method="POST" class="card-body p-5 text-center" enctype="multipart/form-data">
                         <div class=" mt-md-4 pb-5">
 
-                            <h2 class="fw-bold mb-2 text-uppercase">Sign up student</h2>
-                            <p class="text-white-50 mb-5">Please enter your data!</p>
+                    {% if view_name == 'register_student' %}<h2 class="fw-bold mb-2 text-uppercase">Sign up student</h2>{% endif %}
+                    {% if view_name == 'register_teacher' %}<h2 class="fw-bold mb-2 text-uppercase">Sign up teacher</h2>{% endif %}
+                    {% if view_name == 'register_parent' %}<h2 class="fw-bold mb-2 text-uppercase">Sign up parent</h2>{% endif %}
 
-                            {%for field in registration_form %}
-                                {{field|add_class:"form-control form-control-md"}}
-                                {{field|add_label_class:"form-label"}}
-                            {%endfor%}
+                            <p class="text-white-50 mb-5">Please enter data!</p>
+
+                            {% for field in registration_form %}
+                            {% if field.name != 'class_unit' or view_name == 'register_student' %}
+                                {{ field|add_class:"form-control form-control-md" }}
+                                {{ field|add_label_class:"form-label" }}
+                            {% endif %}
+                            {% endfor %}
+
 
 
                             {% if view_name == 'register_teacher' %}
