--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
 
 
 {% if not parent_kids %}
@@ -14,7 +14,15 @@
         <span class="filter-close" id="filterButtonClose">&times;</span>
         <div class="filter-form">
             <div class="form-field">
-                <form action="{% url 'filter_events' %}" method="post">
+                {% if not current_parent %}
+                <form action="{% url 'filter_events_student_parent' %}" method="post">
+                    <p>jestem w dobrym filtrze</p>
+
+                    {% else %}
+                <form action="{% url 'filter_events_student' %}" method="post">
+                    <p>jestem w zlym filtrze</p>
+                    {% endif %}
+
                     {% csrf_token %}
                 <label for="subject">Subject:</label>
                 <select name="subject" id="subject" class="filter-form-control">
@@ -136,9 +144,9 @@
     </div>
 {% for kid in parent_kids %}
 <a href="{% url 'student_events' kid.id %}" class="text-decoration-none text-white">
-<div class="row pt-4 justify-content-center mt-4">
+<div class="row pt-4 justify-content-center mt-4 ">
     <div class="col-md-4 mb-4">
-        <div class="card-one">
+        <div class="card-one card-chose-child">
             <div class="text-center text-white">
 
                 <h4 class="my-3" editable="inline">{{kid}}
