--- a/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_event_details.html
@@ -25,7 +25,9 @@
                 </div>
             </div>
 
-        <a href="{% url 'events' %}">
+            
+
+        <a href="{% url 'teacher_events' %}">
             <i class="fa-solid fa-backward" style="color: #023602;"></i>
         </a>
  
